--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,4 +14,4 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           SOURCE: "./"
-          TARGET: "/bradleystanley/de"
+          TARGET: "/Users/bradleystanley/Documents/de"
